# textadept-spellcheck

./: .hgtags  CMakeLists.txt  Makefile  README.md  init.lua  spell.cxx
.github/workflows/: release.yml
